--- a/Chef's Hub/flutter_application_1/pubspec.yaml
+++ b/Chef's Hub/flutter_application_1/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: '>=3.3.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,11 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   iconsax: ^0.0.8
+  firebase_core: ^1.20.0
+  firebase_auth: ^3.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
- 
+
+  image_picker: ^0.8.4+1
+  http: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,7 +66,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/
+    - assets/logo.png
+    - assets/servings.png
+    - assets/servings3.png
+    - assets/servings2.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
