--- a/Chef's Hub/nextchefapp/pubspec.yaml
+++ b/Chef's Hub/nextchefapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.19.1
   firebase_core: ^2.29.0
   font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
